syntax = "proto3";

package obs_remote.v5.scenes;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Scenes {
  // Original: GetSceneList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetCurrentScene
  rpc Current(google.protobuf.Empty) returns (google.protobuf.StringValue);
  // Original: -
  rpc SetCurrentProgramScene(google.protobuf.StringValue)
      returns (google.protobuf.Empty);
  // Original: -
  rpc CurrentPreviewScene(google.protobuf.Empty)
      returns (google.protobuf.StringValue);
  // Original: -
  rpc SetCurrentPreviewScene(google.protobuf.StringValue)
      returns (google.protobuf.Empty);
  // Original: SetSceneIndex
  rpc SetIndex(google.protobuf.UInt32Value) returns (google.protobuf.Empty);
  // Original: SetSceneName
  rpc SetName(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: CreateScene
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteScene
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSceneTransitionOverride
  rpc TransitionOverride(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneTransitionOverride
  rpc CreateTransitionOverride(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: DeleteSceneTransitionOverride
  rpc DeleteTransitionOverride(google.protobuf.Empty)
      returns (google.protobuf.Empty);
}
